2001-11-29  Adrian Aichner  <adrian@xemacs.org>

	* menubar-items.el (Menubar-items-truncate-list): Removed.
	* menubar-items.el (Menubar-items-truncate-history): New.
	* menubar-items.el (default-menubar): Use
	Menubar-items-truncate-history.

2001-11-28  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-locate-index-file): Also search the
	core etc/ directory for the package index file if it can't be
	found in ~/.xemacs/.

2001-10-29  Andy Piper  <andy@xemacs.org>

	* code-files.el (toggle-buffer-file-coding-system): mark buffer as
	modified when changing coding system.

	* toolbar-items.el (toolbar-dired): Use interactive "D" spec so
	that we invoke the GUI directory selector.

2001-10-25  Andy Piper  <andy@xemacs.org>

	* dialog.el (make-dialog-box): use new directory dialog support.
	* minibuf.el (read-file-name-1): ditto.
	(read-file-name): ditto.
	(read-directory-name): ditto.

2001-09-28  Ben Wing  <ben@xemacs.org>

	* font-lock.el:
	* font-lock.el (font-lock-after-change-function):
	fix problem with last patch, reported by Katsumi Yamaoka.

2001-09-17  Ben Wing  <ben@xemacs.org>

	* font-lock.el (font-lock-after-change-function):
	fix problem when you insert a comment on the line before a line of
	code: if we use the following char, then when you hit backspace,
	the following line of code turns the comment color.

2001-09-15   Edward M. Lee  <tailbert@yahoo.com>

	* files.el (auto-mode-alist): Add configure.ac support.

2001-09-07  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.3 "asparagus" is released.

2001-08-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* README:  Partial update.

2001-08-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* wid-edit.el (widget-specify-secret):
	(widget-get):
	(widget-default-get):
	(widget-match-inline):
	(widget-create):
	(widget-create-child-and-convert):
	(widget-create-child):
	(widget-convert-text):
	(widget-convert-button):
	(widget-field-activate):
	(widget-beginning-of-line):